[package]
name = "mpc_millionaires"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name="scale_wasm"
test=false
bench=false
path="src/main.rs"

[dependencies]
cosmian_std = { version = "0.1.0" }

[features]
emulate = ["cosmian_std/emulate"]

[profile.dev]
overflow-checks = false

[profile.release]
# Note: Do not set `debug = true`, `wasm-opt` dies horribly if you do.
panic = "abort"
# LTO really cleans up the amount of wasm that is generated
lto = true
codegen-units = 1

[patch.crates-io]
scale_impl_generator={path="./vendor/scale_impl_generator_patch"}
scale-core={path="./vendor/scale-core-patch"}